<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XatEntresol</string>
    <string name="app_name_manifest">XatEntresòl</string>
    <string name="people">Usuarios</string>
    <string name="my_account">Mi Cuenta</string>
    <string name="my_name">Mi Nombre</string>
    <string name="my_bio">Mi Bio</string>
    <string name="save">Guardar</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="fire_your_message">Envia tu mensaje</string>
    <string name="button_send_alt">Botón Enviar</string>
    <string name="continue_amp_sign_in"><![CDATA[Continuar o Registrarse]]></string>
    <string name="logo_kick_alt">Logo Kick</string>
    <string name="settings">Configuración</string>
    <string name="help">Ayuda</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="delete_user">Eliminar usuario</string>
    <string name="close">Cerrar</string>
    <string name="close_message">¿Seguro que deseas salir de la app?</string>
    <string name="delete_message">¿Seguro que deseas eliminar tu cuenta?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="app_logo_alt">Logo App</string>
    <string name="reset_password">Cambiar Contraseña</string>
    <string name="back">ATRÁS</string>
    <string name="your_email_here">Introduce tu email</string>
    <string name="to_reset_password">Para cambiar tu contraseña, introduce tu email y pulsa Cambiar contraseña. Comprueba tu correo y sigue las instrucciones.</string>
    <string name="forgot_your_password">¿Has olvidado tu contraseña?</string>
    <string name="aviso">Importante</string>
    <string name="aviso_mensaje">" Es indispensable utilizar un email real. Si te equivocas o pones un email no existente no podrás entrar en la app y el usuario se eliminará. Tendrás que crear otro usuario con un email válido."</string>
    <string name="no_volver_a_ver">No volver a mostrar</string>
    <string name="ok">OK</string>
    <string name="verifica_correo">Comprueba tu correo para verificar tu cuenta.</string>
    <string name="photo_user_message">Es indispensable que añadas una foto a tu perfil</string>
    <string name="default_notification_channel_name">Noticias</string>
    <string name="suscribir_a_noticias">Suscribir a noticias</string>
    <string name="profile_image_user_alt">Imagen Perfil Usuario</string>
    <string name="logo_settings_alt">Logo Configuración</string>
    <string name="notificaciones_push">Notificaciones push</string>
    <string name="all_users">Reportar a un usuario</string>
    <string name="legal_info">Información legal</string>
    <string name="aprieta_la_imagen_para_volver_atr_s">Aprieta la imagen para volver atrás</string>
    <string name="camara">Cámara</string>
    <string name="galeria">Galería</string>
    <string name="selecciona_una_foto">Selecciona una foto</string>
    <string name="camera_logo">Camera Logo</string>
    <string name="gallery_logo">Gallery Logo</string>
    <string name="no_network">No network</string>
    <string name="grupo">Grupo</string>
    <string name="report_user">Vas a reportar al usuario que has seleccionado. ¿Podrías indicar la o las razones?</string>
    <string name="report_user_message">Reportar usuario</string>
    <string name="reportar">Reportar</string>
    <string name="salir">Salir</string>
    <string name="introduce_el_texto_aqu">Introduce el texto aquí</string>
    <string name="message_to_banned_user">Has sido reportado por un usuario por un comportamiento inadecuado. Esto es un aviso. La segunda vez que tengas un incidente serás eliminado como usuario de XatEntresòl.</string>
    <string name="enviando_reporte">Enviando reporte. Por favor espera.</string>
    <string name="aviso_nombre">Se ha detectado que hay otro usuario con el mismo nombre de usuario. Por favor introduce otro nombre distinto.\n\ Tambien es recomendable que pongas una imagen de perfil.</string>
    <string name="aviso_phptp">Es indispensable que pongas una imagen de perfil.</string>
    <string name="delete_user_debug">Delete user (Debug)</string>
    <string name="notification_off">Desactivar notificaciones push</string>
    <string name="notification_on">Notificaciones push</string>
    <string name="notication_sound_on">Activar sonido</string>
    <string name="notication_sound_off">Desactivar sonido</string>
    <string name="notification_vibration_on">Activar vibración</string>
    <string name="notification_vibration_off">Desactivar vibración</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="aviso_rechazo_legal">Lo sentimos, no podrás entrar en la app</string>
    <string name="aviso_legal">Aviso Legal</string>
    <string name="editar_nombre_usuario">Editar nombre usuario</string>
    <string name="editar_bio_usuario">Editar bio usuario</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="sin_conexion">Sin conexión</string>
    <string name="intentalo_de_nuevo">Intentalo de nuevo</string>
    <string name="info_app">Información de la app</string>
    <string name="quieres_cambiar_tu_contrase_a">¿Quieres cambiar tu contraseña?</string>
    <string name="xatentres_l_v_1_0">XatEntresòl v.1.0</string>
    <string name="link">© Kick in the Eye 2018</string>


    <string-array name="list_settings">
        <item>@string/delete_user</item>
        <item>@string/reset_password</item>
        <item>@string/my_account</item>
        <item>@string/notificaciones_push</item>
        <item>@string/legal_info</item>
        <item>@string/all_users</item>
        <item>@string/cerrar_sesion</item>
        <item>@string/info_app</item>
    </string-array>

    <string-array name="list_notifications">
        <item>@string/notication_sound_on</item>
        <item>@string/notification_vibration_on</item>

    </string-array>

</resources>